[tool.poetry]
name        = "rag-examples"
version     = "0.1.0"
description = "Local RAG pipeline that embeds a folder of documents, stores them in Chroma, and chats via ChatGPT or webAI"
authors     = ["<you>"]

[tool.poetry.dependencies]
python                    = "^3.12"
openai                    = "^1.30"
python-dotenv             = "^1.0.1"
tiktoken = "^0.9.0"
langchain-community = "^0.3.27"
langchain-text-splitters = "^0.3.8"
chromadb = "^1.0.15"
pypdf = "^5.8.0"
nltk = "^3.9.1"
textblob = "^0.19.0"
llama-index = "^0.12.49"
langchain-openai = "^0.3.28"
sentence-transformers = "^5.0.0"
dotenv = "^0.9.9"
transformers = "^4.53.2"
unstructured = {extras = ["all-docs"], version = "^0.18.9"}
pdfplumber = "^0.11.7"
pillow = "^11.3.0"
rank-bm25 = "^0.2.2"
plotdigitizer = "^0.3.0"
opencv-python-headless = "^4.12.0.88"
pytesseract = "^0.3.13"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
